tests/paczka1/fuzzy1/51242442.err
Error in line 6: tFgv S384 93,4
Error in line 18: NbokGqyzBc S526 45,0
Error in line 27: CRL S384 173,8
Error in line 35: S526 S820 20,1
